mcc/Test/misc/valid/underscore_id.c
int main()
{
	int _local = 5;
	return _local;
}
 