mcc/Test/misc/invalid/not_bin_number.c
int main()
{
	int a = 0b0310;
	return a;
}
 